<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="result">Result</string>
    <string name="calculate">Calculate</string>
    <string name="reset">RESET</string>

    <string name="country_prompt">Choose a country</string>

    <string-array name="country_arrays">
        <item>Addition</item>
        <item>Subtraction</item>
        <item>Multiplication</item>
        <item>Division</item>
    </string-array>

</resources>
